portfolio/dashboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: portfolio-dashboard
  name: portfolio-dashboard
spec:
  ports:
    - name: http
      port: 3015
      targetPort: http
  selector:
    app: portfolio-dashboard
