portfolio/dashboard/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: portfolio-dashboard

spec:
  entryPoints:
    - websecure
  tls:
    secretName: portfolio-tls
  routes:
    - kind: Rule
      match: Host(`portfolio-admin.trap.jp`)
      middlewares:
        - name: auth-trapti-tech-hard
          namespace: auth
      services:
        - namespace: portfolio
          kind: Service
          name: portfolio-dashboard
          port: 3015
          scheme: http
